# rust-tetris

./: CREDITS  Cargo.toml  LICENSE  MANUAL  README.md  TODO
rand_macros/src/: lib.rs
src/: cli.rs  command_arg.rs  gamestate.rs  input.rs  main.rs  online.rs  render.rs  tmp_ptr.rs  views.rs
src/ai/: bounce.rs  fill_one.rs
src/controller/: mod.rs
src/controller/ai/: bounce.rs  bruteforce.rs  fill_one.rs  mod.rs
src/data/: cell.rs  colors.rs  gamestate.rs  input.rs  map.rs  mod.rs  pair_map.rs  player.rs  request.rs  shapes.rs
src/data/grid/: cells_iter.rs  column.rs  columns_iter.rs  difference.rs  imprint.rs  imprint_bool.rs  iter.rs  mod.rs  printer.rs  row.rs  rows_iter.rs  serde.rs  translate.rs  union.rs
src/data/map/: cell.rs  default_map.rs  dynamic_map.rs  mod.rs
src/data/shapes/: mod.rs  tetrimino.rs  tetromino.rs
src/data/world/: default.rs  dynamic.rs  mod.rs
src/game/: event.rs  mod.rs  request.rs  state.rs
src/game/data/: input.rs  mappings.rs  mod.rs  player.rs
src/game/data/world/: default.rs  dynamic.rs  mod.rs
src/online/: mod.rs  packet.rs
src/online/client/: mod.rs  packet.rs
src/online/server/: mod.rs  packet.rs
