[package]
name = "tetr"
version = "0.1.0"
authors = ["Pranz <jesper.fridefors@gmail.com", "Lolirofle <lolipopple@hotmail.com>"]
license = "LGPL-3.0"

[dependencies]
docopt = "0.6"
docopt_macros = {git = "https://github.com/docopt/docopt.rs.git"}#"0.6"
endian-type = "0.1"
enum_primitive = "0.0.2"
num = "0.1"
rand = "0.3"
rustc-serialize = "0.3"

piston = "0.3"
piston2d-graphics = "0.4"
piston2d-opengl_graphics = "0.4"

[dependencies.pistoncore-sdl2_window]
version = "0.4"
optional = true

[dependencies.pistoncore-glfw_window]
version = "0.3"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.4"
optional = true

[features]
default = ["include_glutin"]
include_sdl2   = ["pistoncore-sdl2_window"]
include_glfw   = ["pistoncore-glfw_window"]
include_glutin = ["pistoncore-glutin_window"]
