[package]
name = "tetr"
version = "0.1.0"
authors = ["Pranz <jesper.fridefors@gmail.com", "Lolirofle <lolipopple@hotmail.com>"]
license = "LGPL-3.0"

[dependencies]
bincode = "0.4"
byte_conv = "0.1"
docopt = "0.6"
docopt_macros = "0.6"
fixed_circular_buffer = "0.2"
num = "0.1"
rand = "0.3"
rand_macros = "0.1"
rustc-serialize = "0.3"
serde = "0.5"
serde_macros = "0.5"
vec_map = "0.3"

piston = "0.10"
piston2d-graphics = "0.6"
piston2d-opengl_graphics = "0.8"
pistoncore-event = "0.4.0"

[dependencies.pistoncore-sdl2_window]
version = "0.12"
optional = true

[dependencies.pistoncore-glfw_window]
version = "0.9"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.12"
optional = true

[features]
default = ["include_glutin"]
include_sdl2   = ["pistoncore-sdl2_window"]
include_glfw   = ["pistoncore-glfw_window"]
include_glutin = ["pistoncore-glutin_window"]
